fix: locale management

--- a/i18n/messages/bn.json
+++ b/i18n/messages/bn.json
@@ -1,14 +1,10 @@
 {
+  "Metadata": {
+    "title": "আইইএলটিএস কোর্স",
+    "description": "১০ মিনিট স্কুলে আইইএলটিএস কোর্সটি এক্সপ্লোর করুন।",
+    "keywords": "আইইএলটিএস কোর্স, আইইএলটিএস প্রস্তুতি, আইইএলটিএস বাংলাদেশ"
+  },
   "ProductPage": {
-    "seo": {
-      "title": "আইইএলটিএস কোর্স",
-      "description": "১০ মিনিট স্কুলে আইইএলটিএস কোর্সটি এক্সপ্লোর করুন।",
-      "keywords": [
-        "আইইএলটিএস কোর্স",
-        "আইইএলটিএস প্রস্তুতি",
-        "আইইএলটিএস বাংলাদেশ"
-      ]
-    },
     "rating": {
       "text": "82.6% শিক্ষার্থী কোর্স শেষে ৫ রেটিং দিয়েছেন"
     },
@@ -19,6 +15,14 @@
     "contact": {
       "title": "কোর্সটি সম্পর্কে বিস্তারিত জানতে",
       "urlText": "ফোন করুন (১৬৯১০)"
+    }
+  },
+  "search": {
+    "label": "সার্চ করুন",
+    "placeholder": "স্কিলস কোর্স, কিংবা স্কুল প্রোগ্রাম সার্চ করুন",
+    "result": {
+      "title": "জনপ্রিয় অনুসন্ধান",
+      "notFound": "কোন ফলাফল পাওয়া যায়নি"
     }
   }
 }
