--- a/i18n/messages/en.json
+++ b/i18n/messages/en.json
@@ -1,10 +1,10 @@
 {
+  "Metadata": {
+    "title": "IELTS Course",
+    "description": "Explore the IELTS Course at 10 Minute School.",
+    "keywords": "IELTS Course, IELTS Preparation, IELTS Bangladesh"
+  },
   "ProductPage": {
-    "seo": {
-      "title": "IELTS Course",
-      "description": "Explore the IELTS Course at 10 Minute School.",
-      "keywords": ["IELTS Course", "IELTS Preparation", "IELTS Bangladesh"]
-    },
     "rating": {
       "text": "82.6% of students gave a 5-star rating after completing the course"
     },
@@ -15,6 +15,14 @@
     "contact": {
       "title": "To learn more about the course",
       "urlText": "Call (16910)"
+    }
+  },
+  "search": {
+    "label": "Search",
+    "placeholder": "Search for skills courses or school programs",
+    "result": {
+      "title": "Popular searches",
+      "notFound": "No results found"
     }
   }
 }
