chore: update contact text and number for locale

--- a/i18n/messages/bn.json
+++ b/i18n/messages/bn.json
@@ -14,7 +14,8 @@
     },
     "contact": {
       "title": "কোর্সটি সম্পর্কে বিস্তারিত জানতে",
-      "urlText": "ফোন করুন (১৬৯১০)"
+      "text": "ফোন করুন",
+      "number": "১৬৯১০"
     }
   },
   "search": {
